--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,18 @@
     "https://web.whatsapp.com/*"
   ],
   "action": {
-    "default_popup": "popup.html"
+  "default_icon": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   },
+  "default_popup": "popup.html"
+},
+"icons": {
+  "16": "images/icon16.png",
+  "48": "images/icon48.png",
+  "128": "images/icon128.png"
+},
   "content_scripts": [
     {
       "matches": ["https://web.whatsapp.com/*"],
