--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "WhatsApp Web copy URL",
   "version": "1.0",
-  "description": "Chrome addon, that lets you copy and paste WhatsApp Web URLs to specific chats, so you can snooze them and clean up your Whatsapp inbox.",
+  "description": "Chrome addon that lets you copy and paste WhatsApp Web URLs to specific chats, so you can snooze them & clean up your Whatsapp inbox",
   "permissions": ["activeTab", "scripting", "clipboardWrite"],
   "host_permissions": [
     "https://web.whatsapp.com/*"
